testdata/golden/sema/invalid/magic_op_trivial_recursion.fmt
type Foo = { x: int }

extern<Foo> {
    pub fn __mul(self: &Foo, other: int) -> Foo {
        return self * other;
    }
}
